# InOrderParser

./: CMakeLists.txt  README.md  dynet  pre2mid.cc
EVALB/: COLLINS_ch.prm  evalb
dynet/: model.cc
impl/: CMakeLists.txt  Kparser-standard.cc  Kparser.cc  cl-args.h  compressed-fstream.h  eval.cc  oracle.cc  oracle.h  pretrained.cc  pretrained.h
scripts/: get_dictionary.py  get_oracle.py  mid2tree.py  sample_mid2tree.py
